<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ifondo"
    tools:context=".Fragment.FragmentRegistrar">

    <Button
        android:id="@+id/btn_entrar2"
        android:layout_width="203dp"
        android:layout_height="45dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="104dp"
        android:background="@drawable/styles_border"
        android:gravity="center"
        android:text="@string/Act_crear_cat_btn_regist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password2" />

    <EditText
        android:id="@+id/ed_usuario2"
        android:layout_width="248dp"
        android:layout_height="47dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="83dp"
        android:backgroundTint="@color/colorTexto"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Act_crear_cat_txt_email"
        android:inputType="textPersonName"
        android:textColor="@color/colorTexto"
        android:textColorHint="@color/colorTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/ed_password2"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="81dp"
        android:backgroundTint="@color/colorTexto"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Act_crear_cat_txt_passwor"
        android:inputType="textPassword"
        android:textColor="@color/colorTexto"
        android:textColorHint="@color/colorTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_usuario2" />

    <Button
        android:id="@+id/btn_inicio_secion"
        android:layout_width="106dp"
        android:layout_height="30dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="299dp"
        android:background="@drawable/styles_border"
        android:gravity="center"
        android:text="@string/Act_crear_cat_btn_volverInicioSesion"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:text="Introduzca Email y Password"
        android:textColor="@color/colorTexto"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>