<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ifondo"
    tools:context=".RecuperarPassword">

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="298dp"
        android:layout_height="46dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/colorTexto"
        android:textColor="@color/colorTexto"
        android:textColorHint="@color/colorTexto"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Act_recupera_txt_emial"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="403dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorTexto"
        android:gravity="center"
        android:text="@string/Act_recupera_lbl_titulo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="378dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorTexto"
        android:gravity="center"
        android:text="Le enviaremos un correo electronico a su email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="268dp"
        android:layout_height="34dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:textColor="@color/colorTexto"
        android:gravity="center"
        android:text="para restablecer su cuenta"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="235dp"
        android:layout_height="33dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="272dp"
        android:background="@drawable/styles_border"
        android:gravity="center"
        android:onClick="recuperarPassword"
        android:text="@string/Act_recupera_inicia_secion"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="176dp"
        android:textColor="@color/colorTexto"
        android:gravity="center"
        android:text="@string/Act_recupera_lbl_titulo2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>